Fixed logo alignment and category banner icon overlapping issues

--- a/docroot/profiles/unicef/themes/custom/vss/css/style.css
+++ b/docroot/profiles/unicef/themes/custom/vss/css/style.css
@@ -213,6 +213,10 @@ ul.block-menu-item-fieldsfooter-last-menu {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex; }
+  .region-header .logo-wrapper {
+    -webkit-box-flex: 215px;
+        -ms-flex: 215px 0 0px;
+            flex: 215px 0 0; }
   .region-header #nav_wrap {
     margin-left: auto; }
   .region-header #block-iraqnavigationheadermenu,
